Release 0.32 - April 18, 2005

Bugs fixed:
- Task Coach failure on startup due to trying to add a column
  from the task list view to the effort view.


Release 0.31 - April 17, 2005

Note:
- Task Coach migrated to Python 2.4.1 and wxPython 2.5.5.1. Added
  check to give friendly message if wxPython version is below the
  required version number.

Bugs fixed:
- A unittest.py bug that was fixed in Python 2.4 revealed a
  bug in test.py (1181714)
- When searching for a task that is completed, while the 
  'show completed' switch is off, the search shows the path to 
  the task (i.e. parent tasks), but not the matched task itself 
  (1182528).
- When searching for tasks in the tree view, composite tasks 
  are expanded automatically to show the children that match
  the search string (1182528).
- Columns were hidden by setting their width to 0, but that did not
  make them entirely invisible on some Linux platforms (1152566). 
- When editing a subtask, sometimes its branch would be 
  collapsed (1179266).

Features added:
- In the task list and effort list the task column is automatically
  resized to take up the available space.
- Added columns to the task list view for: budget, total budget,
  budget left, and total budget left.
- Reorganized view menu, added extra task filters, added menu item to
  reset filters (1181762, 1178882, 1178780).
- The subject is selected in the task editor so that replacing it 
  is a bit easier (1180887).


Release 0.30 - April 11, 2005

Bugs fixed:
- More than one task due today would crash Task Coach (1180641).



Release 0.29 - April 10, 2005

Bugs fixed:
- New effort in the context menu did not work in release 0.28 
  (1178562).
- When selecting 'View' -> 'Completed tasks' in the task tree, only
  completed root tasks were hidden (1179372).
  
Features added:
- What tab is active is now a persistent setting. This includes the tabs 
  and choices in the mainwindow and the effort choices in the task editor
  (1178779).