@@ -3,6 +3,10 @@ Release 0.32 - April 18, 2005
 Bugs fixed:
 - Task Coach failure on startup due to trying to add a column
   from the task list view to the effort view.
+- Budget couldn't be filled in in the executable Windows
+  distribution "LookupError: unknown encoding: latin1".
+- Loading files with the executable Windows distribution failed
+  (1185259).
 
 
 Release 0.31 - April 17, 2005
